[package]
name = "loopchii-wasm-core"
version = "0.1.0"
edition = "2021"
description = "Public deterministic micro-kernel scaffold for Stream browser demos."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
